--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,17 +18,14 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Set up JDK 18
+    - uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: 17
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+    - uses: gradle/gradle-build-action@v2
       with:
         arguments: build
